[gd_scene load_steps=2 format=3 uid="uid://c8o5anacgxamn"]

[ext_resource type="Script" path="res://addons/quest_manager/Editor/Nodes/Branch.gd" id="1_5cc0i"]

[node name="9d6c4ed379" type="GraphNode"]
custom_minimum_size = Vector2(150, 250)
offset_right = 197.0
offset_bottom = 250.0
size_flags_vertical = 4
tooltip_text = "Action Quest Step requires an action to be completed to advance"
title = "Branch Step"
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(0, 1, 0, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(0, 1, 0, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 2
slot/1/left_color = Color(0, 0, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(0, 1, 0, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = true
slot/2/right_type = 0
slot/2/right_color = Color(0, 1, 0, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
script = ExtResource("1_5cc0i")

[node name="details" type="TextEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Details"
context_menu_enabled = false
caret_blink = true
caret_blink_interval = 0.5

[node name="item_name" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="branch_condition" type="OptionButton" parent="."]
unique_name_in_owner = true
layout_mode = 2
item_count = 6
selected = 0
popup/item_0/text = "TRUE"
popup/item_0/id = 0
popup/item_1/text = "FALSE"
popup/item_1/id = 1
popup/item_2/text = "GREATER THAN"
popup/item_2/id = 2
popup/item_3/text = "LESS THAN"
popup/item_3/id = 3
popup/item_4/text = "EQUAL TO"
popup/item_4/id = 4
popup/item_5/text = "NOT EQUAL TO"
popup/item_5/id = 5

[node name="condition_value" type="SpinBox" parent="."]
unique_name_in_owner = true
layout_mode = 2
max_value = 0.0
allow_greater = true
allow_lesser = true

[connection signal="gui_input" from="details" to="." method="_on_details_gui_input"]
